Remove countries + Keep southeast and east + average temp each year

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -1184,6 +1184,148 @@
     "east_asia_data = data[data[\"Region\"] == \"East Asia\"]\n",
     "east_asia_data"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove countries + Keep southeast and east + average temp each year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>1961</th>\n",
+       "      <th>1962</th>\n",
+       "      <th>1963</th>\n",
+       "      <th>1964</th>\n",
+       "      <th>1965</th>\n",
+       "      <th>1966</th>\n",
+       "      <th>1967</th>\n",
+       "      <th>1968</th>\n",
+       "      <th>1969</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "      <th>2023</th>\n",
+       "      <th>2024</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>East Asia</td>\n",
+       "      <td>0.335429</td>\n",
+       "      <td>-0.060571</td>\n",
+       "      <td>0.2100</td>\n",
+       "      <td>0.158571</td>\n",
+       "      <td>0.045286</td>\n",
+       "      <td>0.271429</td>\n",
+       "      <td>-0.036714</td>\n",
+       "      <td>-0.5900</td>\n",
+       "      <td>-0.262429</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.239000</td>\n",
+       "      <td>1.213857</td>\n",
+       "      <td>1.490714</td>\n",
+       "      <td>1.215857</td>\n",
+       "      <td>1.595000</td>\n",
+       "      <td>1.750571</td>\n",
+       "      <td>1.734286</td>\n",
+       "      <td>1.569857</td>\n",
+       "      <td>1.730286</td>\n",
+       "      <td>2.242714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Southeast Asia</td>\n",
+       "      <td>-0.049900</td>\n",
+       "      <td>-0.101300</td>\n",
+       "      <td>-0.2855</td>\n",
+       "      <td>0.003400</td>\n",
+       "      <td>-0.223222</td>\n",
+       "      <td>0.277600</td>\n",
+       "      <td>-0.138400</td>\n",
+       "      <td>-0.1313</td>\n",
+       "      <td>0.307600</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.054818</td>\n",
+       "      <td>1.421455</td>\n",
+       "      <td>1.050000</td>\n",
+       "      <td>0.898455</td>\n",
+       "      <td>1.449364</td>\n",
+       "      <td>1.396455</td>\n",
+       "      <td>1.127273</td>\n",
+       "      <td>1.021364</td>\n",
+       "      <td>1.277727</td>\n",
+       "      <td>1.728909</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 65 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Region      1961      1962    1963      1964      1965      1966  \\\n",
+       "0       East Asia  0.335429 -0.060571  0.2100  0.158571  0.045286  0.271429   \n",
+       "1  Southeast Asia -0.049900 -0.101300 -0.2855  0.003400 -0.223222  0.277600   \n",
+       "\n",
+       "       1967    1968      1969  ...      2015      2016      2017      2018  \\\n",
+       "0 -0.036714 -0.5900 -0.262429  ...  1.239000  1.213857  1.490714  1.215857   \n",
+       "1 -0.138400 -0.1313  0.307600  ...  1.054818  1.421455  1.050000  0.898455   \n",
+       "\n",
+       "       2019      2020      2021      2022      2023      2024  \n",
+       "0  1.595000  1.750571  1.734286  1.569857  1.730286  2.242714  \n",
+       "1  1.449364  1.396455  1.127273  1.021364  1.277727  1.728909  \n",
+       "\n",
+       "[2 rows x 65 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = data[data[\"Region\"].notna()].reset_index(drop=True)\n",
+    "region_avg = (\n",
+    "    data.groupby(\"Region\")[year_cols]\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "display(region_avg)"
+   ]
   }
  ],
  "metadata": {
