--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -927,6 +927,24 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: '../data/southeast_asia.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "southeast_asia_data.to_csv(\"../data/southeast_asia.csv\", index=False)\n",
+    "print(\"Saved: '../data/southeast_asia.csv'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1175,7 +1193,7 @@
        "[7 rows x 66 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,6 +1201,24 @@
    "source": [
     "east_asia_data = data[data[\"Region\"] == \"East Asia\"]\n",
     "east_asia_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: '../data/east_asia_data.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "east_asia_data.to_csv(\"../data/east_asia_data.csv\", index=False)\n",
+    "print(\"Saved: '../data/east_asia_data.csv'\")"
    ]
   },
   {
@@ -1325,6 +1361,24 @@
     ")\n",
     "\n",
     "display(region_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: '../data/region_avg.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "region_avg.to_csv(\"../data/region_avg.csv\", index=False)\n",
+    "print(\"Saved: '../data/region_avg.csv'\")"
    ]
   }
  ],
