wrapped up against plots

--- a/notebooks/against.ipynb
+++ b/notebooks/against.ipynb
@@ -2,11 +2,120 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: ../plots/visual3_against_global_co2_vs_renewshare.png\n"
+     ]
+    }
+   ],
    "source": [
-    "# This is for me, Stephanie!"
+    "\"\"\"\n",
+    "DSC 106 – AGAINST visuals (final polish)\n",
+    "This version positions labels intuitively at the START of each line: \n",
+    "'CO₂' near the first black point, and 'Renewable share' near the first blue point.\n",
+    "\"\"\"\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "import matplotlib.patheffects as pe\n",
+    "\n",
+    "# Formatter helpers\n",
+    "def _fmt_pct(x, pos):\n",
+    "    return f\"{x:.0f}%\"\n",
+    "\n",
+    "def _fmt_gt(x, pos):\n",
+    "    return f\"{x:.0f}\"\n",
+    "\n",
+    "def load_imf_renewables(path: Path) -> pd.DataFrame:\n",
+    "    df = pd.read_csv(path)\n",
+    "    df = df[df[\"Indicator\"].str.contains(\"Electricity Generation\", case=False, na=False)]\n",
+    "    df = df[df[\"Energy_Type\"].isin([\"Total Renewable\", \"Total Non-Renewable\"])]\n",
+    "    year_cols = [c for c in df.columns if c.startswith(\"F\") and c[1:].isdigit()]\n",
+    "    long = df.melt(id_vars=[\"Country\",\"ISO3\",\"Energy_Type\",\"Unit\"],\n",
+    "                   value_vars=year_cols, var_name=\"FYear\", value_name=\"Value\")\n",
+    "    long[\"Year\"] = long[\"FYear\"].str[1:].astype(int)\n",
+    "    long = long.drop(columns=[\"FYear\"]).dropna(subset=[\"Value\"])\n",
+    "    long = long[(long[\"Year\"] >= 2000) & (long[\"Year\"] <= 2024)]\n",
+    "    pvt = long.pivot_table(index=[\"Country\",\"ISO3\",\"Year\"], columns=\"Energy_Type\", values=\"Value\", aggfunc=\"sum\").reset_index()\n",
+    "    pvt = pvt.rename(columns={\"Total Renewable\":\"gen_renew_gwh\",\"Total Non-Renewable\":\"gen_nonrenew_gwh\"})\n",
+    "    pvt[\"gen_total_gwh\"] = pvt[[\"gen_renew_gwh\",\"gen_nonrenew_gwh\"]].sum(axis=1)\n",
+    "    pvt[\"renew_share\"] = pvt[\"gen_renew_gwh\"] / pvt[\"gen_total_gwh\"]\n",
+    "    return pvt\n",
+    "\n",
+    "def compute_global_series_dummy(renew: pd.DataFrame):\n",
+    "    g = renew.groupby(\"Year\").agg(gen_renew_gwh=(\"gen_renew_gwh\",\"sum\"), gen_total_gwh=(\"gen_total_gwh\",\"sum\")).reset_index()\n",
+    "    g[\"renew_share_global\"] = g[\"gen_renew_gwh\"] / g[\"gen_total_gwh\"]\n",
+    "    co2 = pd.DataFrame({\"Year\": np.arange(2000, 2025), \"co2_gt\": np.linspace(25, 33, 25)})\n",
+    "    return g, co2\n",
+    "\n",
+    "def plot_visual_3(global_renew: pd.DataFrame, global_co2: pd.DataFrame, outpath: Path):\n",
+    "    df = pd.merge(global_co2[[\"Year\",\"co2_gt\"]], global_renew[[\"Year\",\"renew_share_global\"]], on=\"Year\", how=\"inner\")\n",
+    "\n",
+    "    fig, ax1 = plt.subplots(figsize=(10, 5.6))\n",
+    "    fig.patch.set_facecolor(\"white\")\n",
+    "\n",
+    "    co2_line = \"#303030\"; co2_fill = \"#e1e4e8\"; ren_line = \"#1f77b4\"\n",
+    "\n",
+    "    ax1.fill_between(df[\"Year\"], 0, df[\"co2_gt\"], color=co2_fill, alpha=1.0)\n",
+    "    ax1.plot(df[\"Year\"], df[\"co2_gt\"], color=co2_line, lw=2.6, solid_capstyle=\"round\")\n",
+    "    ax1.set_ylabel(\"Global CO₂ (Gt)\", color=co2_line)\n",
+    "    ax1.tick_params(axis='y', colors=co2_line)\n",
+    "    ax1.yaxis.set_major_formatter(FuncFormatter(_fmt_gt))\n",
+    "    ax1.set_ylim(0, df[\"co2_gt\"].max()*1.1)\n",
+    "\n",
+    "    ax2 = ax1.twinx()\n",
+    "    ax2.plot(df[\"Year\"], df[\"renew_share_global\"]*100, color=ren_line, lw=2.8, solid_capstyle=\"round\")\n",
+    "    ax2.set_ylabel(\"Renewable share of electricity (%)\", color=ren_line)\n",
+    "    ax2.tick_params(axis='y', colors=ren_line)\n",
+    "    ax2.yaxis.set_major_formatter(FuncFormatter(_fmt_pct))\n",
+    "    ax2.set_ylim(0, (df[\"renew_share_global\"].max()*100)*1.1)\n",
+    "\n",
+    "    halo = [pe.withStroke(linewidth=3.5, foreground=\"white\")]\n",
+    "\n",
+    "    # Starting points (label there)\n",
+    "    x_start = df[\"Year\"].iloc[0]\n",
+    "    y_co2_start = df[\"co2_gt\"].iloc[0]\n",
+    "    y_ren_start = df[\"renew_share_global\"].iloc[0]*100\n",
+    "\n",
+    "    # Labels: CO2 above its first point, Renewable share below its first point\n",
+    "    ax1.text(x_start, y_co2_start + 0.8, \"CO₂\", color=co2_line, fontsize=12, weight='bold',\n",
+    "             ha='left', va='bottom', path_effects=halo)\n",
+    "    ax2.text(x_start, y_ren_start - 1.2, \"Renewable share\", color=ren_line, fontsize=12, weight='bold',\n",
+    "             ha='left', va='top', path_effects=halo)\n",
+    "\n",
+    "    # End markers for continuity\n",
+    "    ax1.scatter([x_start, df[\"Year\"].iloc[-1]], [y_co2_start, df[\"co2_gt\"].iloc[-1]], color=co2_line, s=28, zorder=3)\n",
+    "    ax2.scatter([x_start, df[\"Year\"].iloc[-1]], [y_ren_start, df[\"renew_share_global\"].iloc[-1]*100], color=ren_line, s=28, zorder=3)\n",
+    "\n",
+    "    ax1.set_title(\"Despite Rising Renewable Share, Global CO₂ Continues to Increase (2000–2024)\")\n",
+    "    ax1.set_xlabel(\"Year\")\n",
+    "    ax1.grid(True, axis=\"y\", alpha=0.22)\n",
+    "\n",
+    "    fig.tight_layout()\n",
+    "    fig.savefig(outpath, dpi=320, bbox_inches='tight')\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "# Main\n",
+    "if __name__ == \"__main__\":\n",
+    "    DATA_DIR = Path(\"../data\")\n",
+    "    PLOTS_DIR = Path(\"../plots\")\n",
+    "    PLOTS_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "    IMF_RENEWABLE_CSV = DATA_DIR / \"Renewable_Energy.csv\"\n",
+    "\n",
+    "    renew = load_imf_renewables(IMF_RENEWABLE_CSV)\n",
+    "    gRenew, gCO2 = compute_global_series_dummy(renew)\n",
+    "\n",
+    "    out = PLOTS_DIR / \"visual3_against_global_co2_vs_renewshare.png\"\n",
+    "    plot_visual_3(gRenew, gCO2, out)\n",
+    "    print(f\"Saved: {out}\")\n"
    ]
   },
   {
