--- a/notebooks/for.ipynb
+++ b/notebooks/for.ipynb
@@ -2,12 +2,351 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Here you go Stephanie!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import FuncFormatter\n",
+    "import matplotlib.patheffects as pe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: ../plots/visual2_for_bar.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --------------------------\n",
+    "# Style helpers (colorblind-safe)\n",
+    "# --------------------------\n",
+    "BLUE = \"#1f77b4\"      # renewables\n",
+    "GRAY = \"#4D4D4D\"      # CO2 proxy (non-renewable)\n",
+    "GRAY_FILL = \"#d9d9d9\"\n",
+    "\n",
+    "def fmt_pct(x, pos): return f\"{x:.0f}%\"\n",
+    "def fmt_int(x, pos): return f\"{x:.0f}\"\n",
+    "\n",
+    "# --------------------------\n",
+    "# Load & shape (dataset-only)\n",
+    "# --------------------------\n",
+    "def load_country_year_totals(csv_path: Path) -> pd.DataFrame:\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "\n",
+    "    # Only Electricity Generation (keeps GWh consistent)\n",
+    "    df = df[df[\"Indicator\"].str.contains(\"Electricity Generation\", case=False, na=False)]\n",
+    "    # Keep totals only\n",
+    "    df = df[df[\"Energy_Type\"].isin([\"Total Renewable\", \"Total Non-Renewable\"])]\n",
+    "\n",
+    "    # Year columns like F2000..F2024\n",
+    "    year_cols = [c for c in df.columns if isinstance(c, str) and c.startswith(\"F\") and c[1:].isdigit()]\n",
+    "    long = df.melt(\n",
+    "        id_vars=[\"Country\", \"Energy_Type\"],\n",
+    "        value_vars=year_cols,\n",
+    "        var_name=\"FYear\",\n",
+    "        value_name=\"Value\"\n",
+    "    ).dropna(subset=[\"Value\"])\n",
+    "\n",
+    "    long[\"Year\"] = long[\"FYear\"].str[1:].astype(int)\n",
+    "    long = long[(long[\"Year\"] >= 2000) & (long[\"Year\"] <= 2024)]\n",
+    "\n",
+    "    pvt = (\n",
+    "        long\n",
+    "        .pivot_table(index=[\"Country\",\"Year\"], columns=\"Energy_Type\", values=\"Value\", aggfunc=\"sum\")\n",
+    "        .reset_index()\n",
+    "        .rename(columns={\"Total Renewable\":\"gen_renew_gwh\", \"Total Non-Renewable\":\"gen_nonrenew_gwh\"})\n",
+    "    )\n",
+    "\n",
+    "    pvt[\"gen_total_gwh\"] = pvt[[\"gen_renew_gwh\",\"gen_nonrenew_gwh\"]].sum(axis=1)\n",
+    "    pvt[\"renew_share\"] = pvt[\"gen_renew_gwh\"] / pvt[\"gen_total_gwh\"]\n",
+    "    return pvt\n",
+    "\n",
+    "# --------------------------\n",
+    "# Visual 1 — Global (or regional) line chart\n",
+    "# --------------------------\n",
+    "def global_lines(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    g = (\n",
+    "        df.groupby(\"Year\")\n",
+    "          .agg(gen_renew_gwh=(\"gen_renew_gwh\",\"sum\"),\n",
+    "               gen_nonrenew_gwh=(\"gen_nonrenew_gwh\",\"sum\"),\n",
+    "               gen_total_gwh=(\"gen_total_gwh\",\"sum\"))\n",
+    "          .reset_index()\n",
+    "    )\n",
+    "    g[\"renew_share_global\"] = g[\"gen_renew_gwh\"] / g[\"gen_total_gwh\"]\n",
+    "\n",
+    "    # Non-renewable index (2000 = 100). If first year missing, use earliest available.\n",
+    "    base = g.loc[g[\"Year\"].idxmin(), \"gen_nonrenew_gwh\"]\n",
+    "    g[\"nonrenew_index_2000\"] = g[\"gen_nonrenew_gwh\"] / base * 100.0\n",
+    "    return g\n",
+    "\n",
+    "def plot_visual_for_line_global(g: pd.DataFrame, outpath: Path):\n",
+    "    df = g.copy()\n",
+    "\n",
+    "    fig, ax1 = plt.subplots(figsize=(10.4, 6))\n",
+    "    fig.patch.set_facecolor(\"white\")\n",
+    "\n",
+    "    # --- Left axis: Renewable share (%)\n",
+    "    ax1.plot(df[\"Year\"], df[\"renew_share_global\"]*100, color=BLUE, lw=3, solid_capstyle=\"round\")\n",
+    "    ax1.set_ylabel(\"Renewable share of electricity (%)\", color=BLUE)\n",
+    "    ax1.tick_params(axis=\"y\", colors=BLUE)\n",
+    "    ax1.yaxis.set_major_formatter(FuncFormatter(fmt_pct))\n",
+    "    ax1.set_ylim(0, max(100, (df[\"renew_share_global\"].max()*100)*1.05))  # zero baseline\n",
+    "\n",
+    "    # --- Right axis: Non-renewable index (2000=100) as CO₂ proxy\n",
+    "    ax2 = ax1.twinx()\n",
+    "    # light fill under gray line (pre-attentive area cue without stealing attention)\n",
+    "    ax2.fill_between(df[\"Year\"], 0, df[\"nonrenew_index_2000\"], color=GRAY_FILL, alpha=1.0, zorder=0)\n",
+    "    ax2.plot(df[\"Year\"], df[\"nonrenew_index_2000\"], color=GRAY, lw=2.5, solid_capstyle=\"round\")\n",
+    "    ax2.set_ylabel(\"Non-renewable electricity (index, 2000 = 100)\", color=GRAY)\n",
+    "    ax2.tick_params(axis=\"y\", colors=GRAY)\n",
+    "    ax2.yaxis.set_major_formatter(FuncFormatter(fmt_int))\n",
+    "    ax2.set_ylim(0, df[\"nonrenew_index_2000\"].max()*1.10)  # zero baseline\n",
+    "\n",
+    "    # --- Direct labels near the START of each series\n",
+    "    halo = [pe.withStroke(linewidth=3.5, foreground=\"white\")]\n",
+    "    x0 = df[\"Year\"].iloc[0]\n",
+    "    ax1.text(x0, df[\"renew_share_global\"].iloc[0]*100 + 1.5, \"Renewable share\", color=BLUE,\n",
+    "             fontsize=12, weight=\"bold\", ha=\"left\", va=\"bottom\", path_effects=halo)\n",
+    "    ax2.text(x0, df[\"nonrenew_index_2000\"].iloc[0] + 3, \"Non-renewable (CO₂ proxy)\", color=GRAY,\n",
+    "             fontsize=12, weight=\"bold\", ha=\"left\", va=\"bottom\", path_effects=halo)\n",
+    "\n",
+    "    # subtle grid\n",
+    "    ax1.grid(True, axis=\"y\", alpha=0.20)\n",
+    "\n",
+    "    ax1.set_title(\"Globally, Renewable Share Rises While Non-Renewable Power Slows/Declines (2000–2024)\")\n",
+    "    ax1.set_xlabel(\"Year\")\n",
+    "    fig.tight_layout()\n",
+    "    fig.savefig(outpath, dpi=320, bbox_inches=\"tight\")\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "# --------------------------\n",
+    "# VISUAL 2 — Diverging bar chart\n",
+    "# --------------------------\n",
+    "def plot_visual_for_bar(df: pd.DataFrame, outpath: Path, top_k=12):\n",
+    "    # --- compute changes ---\n",
+    "    def _changes(g):\n",
+    "        g = g.sort_values(\"Year\")\n",
+    "        a, b = g.iloc[0], g.iloc[-1]\n",
+    "        d_renew = (b[\"renew_share\"] - a[\"renew_share\"]) * 100.0\n",
+    "        red_nonrenew = (a[\"gen_nonrenew_gwh\"] - b[\"gen_nonrenew_gwh\"]) / max(a[\"gen_nonrenew_gwh\"], 1e-9) * 100.0\n",
+    "        return pd.Series({\"d_renew_pp\": d_renew, \"reduction_nonrenew_pct\": red_nonrenew})\n",
+    "\n",
+    "    ch = df.groupby(\"Country\", as_index=False).apply(_changes).dropna()\n",
+    "    ch.replace([np.inf, -np.inf], np.nan, inplace=True)\n",
+    "    ch = ch.dropna(subset=[\"d_renew_pp\",\"reduction_nonrenew_pct\"])\n",
+    "\n",
+    "    top = ch.sort_values(\"d_renew_pp\", ascending=False).head(top_k).reset_index(drop=True)\n",
+    "    top = top.iloc[::-1]  # biggest at top visually\n",
+    "    y_pos = np.arange(len(top))\n",
+    "\n",
+    "    # --- plot (safe sizing) ---\n",
+    "    fig, ax = plt.subplots(figsize=(10, 7), constrained_layout=True)\n",
+    "    fig.patch.set_facecolor(\"white\")\n",
+    "\n",
+    "    b1 = ax.barh(y_pos - 0.2, top[\"d_renew_pp\"], height=0.38, color=BLUE, alpha=0.95)\n",
+    "    b2 = ax.barh(y_pos + 0.2, top[\"reduction_nonrenew_pct\"], height=0.38, color=GRAY, alpha=0.85)\n",
+    "\n",
+    "    # numeric labels INSIDE or just past the bar end, but clipped to axes\n",
+    "    ax.bar_label(b1, labels=[f\"{v:.1f} pp\" for v in top[\"d_renew_pp\"]], padding=3, color=BLUE, fontsize=8, clip_on=True)\n",
+    "    ax.bar_label(b2, labels=[f\"{v:.1f} %\"  for v in top[\"reduction_nonrenew_pct\"]], padding=3, color=GRAY, fontsize=8, clip_on=True)\n",
+    "\n",
+    "    # axes & grid\n",
+    "    ax.set_yticks(y_pos)\n",
+    "    ax.set_yticklabels(top[\"Country\"], fontsize=9)\n",
+    "    xmax = float(max(top[\"d_renew_pp\"].max(), top[\"reduction_nonrenew_pct\"].max()))\n",
+    "    ax.set_xlim(0, xmax * 1.1)        # tight x-limits so labels stay inside\n",
+    "    ax.margins(x=0.02)                # tiny margin\n",
+    "    ax.grid(True, axis=\"x\", alpha=0.2)\n",
+    "    ax.tick_params(axis=\"y\", length=0)\n",
+    "    ax.set_xlabel(\"Change from 2000 to 2024\")\n",
+    "    ax.set_title(\"Stronger Renewable Growth Tracks Larger Cuts in Non-Renewable Generation (2000→2024)\")\n",
+    "\n",
+    "    # NOTE: do NOT use bbox_inches='tight' here\n",
+    "    fig.savefig(outpath, dpi=200)\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "\n",
+    "# ---- In your main() ----\n",
+    "if __name__ == \"__main__\":\n",
+    "    DATA_DIR = Path(\"../data\")\n",
+    "    PLOTS_DIR = Path(\"../plots\")\n",
+    "    PLOTS_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    SRC = DATA_DIR / \"Renewable_Energy.csv\"\n",
+    "    df = load_country_year_totals(SRC)\n",
+    "\n",
+    "    # Visual 1 (line)\n",
+    "    g = global_lines(df)\n",
+    "    plot_visual_for_line_global(g, PLOTS_DIR / \"visual1_for_line_global.png\")\n",
+    "\n",
+    "    # Visual 2 (bar)\n",
+    "    out2 = PLOTS_DIR / \"visual2_for_bar.png\"\n",
+    "    plot_visual_for_bar(df, out2, top_k=12)\n",
+    "    print(f\"Saved: {out2}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved stacked and slope visuals.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- color palette ---\n",
+    "BLUE = \"#1f77b4\"   # renewables\n",
+    "GRAY = \"#4D4D4D\"   # fossil\n",
+    "LIGHT_GRAY = \"#d9d9d9\"\n",
+    "\n",
+    "# ----------------------\n",
+    "# Load + transform IMF Renewable data\n",
+    "# ----------------------\n",
+    "def load_country_year_totals(path: Path) -> pd.DataFrame:\n",
+    "    df = pd.read_csv(path)\n",
+    "    df = df[df[\"Indicator\"].str.contains(\"Electricity Generation\", case=False, na=False)]\n",
+    "    df = df[df[\"Energy_Type\"].isin([\"Total Renewable\", \"Total Non-Renewable\"])]\n",
+    "\n",
+    "    year_cols = [c for c in df.columns if c.startswith(\"F\") and c[1:].isdigit()]\n",
+    "    long = df.melt(\n",
+    "        id_vars=[\"Country\", \"Energy_Type\"],\n",
+    "        value_vars=year_cols,\n",
+    "        var_name=\"FYear\",\n",
+    "        value_name=\"Value\"\n",
+    "    ).dropna(subset=[\"Value\"])\n",
+    "\n",
+    "    long[\"Year\"] = long[\"FYear\"].str[1:].astype(int)\n",
+    "    long = long[(long[\"Year\"] >= 2000) & (long[\"Year\"] <= 2024)]\n",
+    "\n",
+    "    pvt = (\n",
+    "        long.pivot_table(index=[\"Country\", \"Year\"], columns=\"Energy_Type\", values=\"Value\", aggfunc=\"sum\")\n",
+    "        .reset_index()\n",
+    "        .rename(columns={\"Total Renewable\": \"gen_renew_gwh\", \"Total Non-Renewable\": \"gen_nonrenew_gwh\"})\n",
+    "    )\n",
+    "    pvt[\"gen_total\"] = pvt[[\"gen_renew_gwh\", \"gen_nonrenew_gwh\"]].sum(axis=1)\n",
+    "    pvt[\"renew_share\"] = pvt[\"gen_renew_gwh\"] / pvt[\"gen_total\"]\n",
+    "    pvt[\"nonrenew_share\"] = 1 - pvt[\"renew_share\"]\n",
+    "    return pvt\n",
+    "\n",
+    "# ----------------------\n",
+    "# Visual 1: 100% composition (renewable vs non-renewable)\n",
+    "# ----------------------\n",
+    "def plot_visual1_stacked(g: pd.DataFrame, outpath: Path):\n",
+    "    gsum = (\n",
+    "        g.groupby(\"Year\")[[\"gen_renew_gwh\", \"gen_nonrenew_gwh\"]].sum().reset_index()\n",
+    "    )\n",
+    "    gsum[\"renew_share\"] = gsum[\"gen_renew_gwh\"] / (gsum[\"gen_renew_gwh\"] + gsum[\"gen_nonrenew_gwh\"])\n",
+    "    gsum[\"nonrenew_share\"] = 1 - gsum[\"renew_share\"]\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 6), constrained_layout=True)\n",
+    "    fig.patch.set_facecolor(\"white\")\n",
+    "\n",
+    "    # 100% composition stack\n",
+    "    ax.stackplot(\n",
+    "        gsum[\"Year\"],\n",
+    "        gsum[\"renew_share\"] * 100,\n",
+    "        gsum[\"nonrenew_share\"] * 100,\n",
+    "        colors=[BLUE, LIGHT_GRAY],\n",
+    "        alpha=0.95\n",
+    "    )\n",
+    "\n",
+    "    # axes\n",
+    "    ax.set_ylim(0, 100)\n",
+    "    first_year = int(gsum[\"Year\"].min())\n",
+    "    last_year  = int(gsum[\"Year\"].max())\n",
+    "    right_pad  = 0.8  # give a little room for endpoint labels\n",
+    "    ax.set_xlim(first_year, last_year + right_pad)\n",
+    "    ax.set_ylabel(\"Share of total electricity (%)\")\n",
+    "    ax.set_xlabel(\"Year\")\n",
+    "    ax.grid(True, axis=\"y\", alpha=0.20)\n",
+    "\n",
+    "    # --- endpoint labels with clash-avoidance ---\n",
+    "    halo = [pe.withStroke(linewidth=3.5, foreground=\"white\")]\n",
+    "\n",
+    "    y_renew_end = float(gsum[\"renew_share\"].iloc[-1] * 100)\n",
+    "    y_fossil_end = float(gsum[\"nonrenew_share\"].iloc[-1] * 100)\n",
+    "\n",
+    "    # If labels are too close, nudge them apart by a few pct points\n",
+    "    if abs(y_renew_end - (100 - y_fossil_end)) < 8:\n",
+    "        # push renew a bit down and fossil a bit up\n",
+    "        renew_nudge = -3.5\n",
+    "        fossil_nudge = +3.5\n",
+    "    else:\n",
+    "        renew_nudge = 0.0\n",
+    "        fossil_nudge = 0.0\n",
+    "\n",
+    "    # Place labels just outside the plotting area on the right\n",
+    "    label_x = last_year + 0.35\n",
+    "\n",
+    "    ax.text(\n",
+    "        label_x, y_renew_end + renew_nudge,\n",
+    "        \"Renewables\",\n",
+    "        color=BLUE, fontsize=12, weight=\"bold\",\n",
+    "        ha=\"left\", va=\"center\",\n",
+    "        path_effects=halo, clip_on=False\n",
+    "    )\n",
+    "\n",
+    "    ax.text(\n",
+    "        label_x, 100 - y_renew_end + fossil_nudge,  # equals y_fossil_end\n",
+    "        \"Fossil / Non-Renewable\",\n",
+    "        color=GRAY, fontsize=12, weight=\"bold\",\n",
+    "        ha=\"left\", va=\"center\",\n",
+    "        path_effects=halo, clip_on=False\n",
+    "    )\n",
+    "\n",
+    "    # title\n",
+    "    ax.set_title(\"As Renewables Rise, Fossil Power Plateaus (2000–2024)\", fontsize=13, pad=10)\n",
+    "\n",
+    "    fig.savefig(outpath, dpi=320)\n",
+    "    plt.close(fig)\n",
+    "\n",
+    "# ----------------------\n",
+    "# Main\n",
+    "# ----------------------\n",
+    "if __name__ == \"__main__\":\n",
+    "    DATA_DIR = Path(\"../data\")\n",
+    "    PLOTS_DIR = Path(\"../plots\")\n",
+    "    PLOTS_DIR.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    SRC = DATA_DIR / \"Renewable_Energy.csv\"\n",
+    "    df = load_country_year_totals(SRC)\n",
+    "\n",
+    "    plot_visual1_stacked(df, PLOTS_DIR / \"visual3_for_stacked.png\")\n",
+    "    print(\"Saved stacked and slope visuals.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
